# progressBarDistributed

./: README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: README.md  publish-to-pypi.yml  test.yml
progressBarDistributed/: __init__.py  base.py  shmProgressBar.py
tests/: _testsShmProgressBar.py  _workerTestForPopen.py  conftest.py  test_edge_cases.py  test_shm_progress_bar.py
